Fix spacing for events creation/events pages

--- a/scss/_create-event.scss
+++ b/scss/_create-event.scss
@@ -9,7 +9,7 @@
   width: 100%;
 }
 
-.em-event-admin-editor {
+.css-event-form {
   position: relative;
   top: -40px;
 }
@@ -17,11 +17,19 @@
 .event-creator {
   padding: 48px 24px;
   background: white;
-  margin: 0;
+  &__container-main {
+    padding: 0 24px;
+    @include tablet-and-up {
+      padding: 0 64px;
+    }
+    @include desktop-and-up {
+      margin: 0 auto;
+    }
+  }
   &:nth-child(n + 2) {
     margin-top: 32px;
   }
-  @include desktop-and-up {
+  @include tablet-and-up {
     padding: 48px 55px;
   }
   @include desktop-and-up {
@@ -301,6 +309,11 @@
       display: none;
       position: absolute;
     }
+  }
+  &__image-delete {
+    position: absolute;
+    top: 24px;
+    right: 24px;
   }
 }
 #event-form p.event-creator__error__label {
