--- a/scss/_events.scss
+++ b/scss/_events.scss
@@ -28,11 +28,27 @@
       }
     }
     .events__container {
+      max-width: 1448px;
+      @include desktop-and-up {
+        padding: 56px 106px 88px;
+      }
+    }
+    .event-creator__container {
+      margin: 0 auto;
+      @include tablet-and-up {
+        max-width: $container-max-width;
+        padding: 0 64px;
+      }
+      @include desktop-and-up {
+        max-width: calc(#{$container-max-width} + 128px);
+        padding-left: 64px;
+      }
+    }
+    .events__container,
+    .event-creator__container {
       padding-top: 24px;
       padding-bottom: 100px;
       @include tablet-and-up {
-        padding-top: 56px;
-        padding-bottom: 88px;
         background-image: url("./images/events-header.png");
         background-repeat: no-repeat;
         background-position: 450px;
@@ -66,18 +82,14 @@
     }
   }
   &__container {
-    max-width: 1228px;
+    max-width: 1448px;
     margin: 0 auto;
     padding: 0 24px;
     @include tablet-and-up {
       padding: 0 64px;
     }
-    &--edit {
-      .em-search-wrapper,
-      .events__nav__container,
-      .events__filter {
-        display: none;
-      }
+    @include desktop-and-up {
+      padding: 0 106px;
     }
   }
   .hidden {
@@ -368,9 +380,11 @@
       margin-top: 32px;
     }
   }
-  &__container + .footer {
-    margin-top: 0;
-  }
+}
+
+.events__container + .footer,
+.event-creator__container-main + .footer {
+  margin-top: 0;
 }
 
 .css-events-admin {
